[Java] Add CRC-32 and CRC-32C checksums.